# app-desktop

./: .gitignore  README.md  avatar_testing_sentences.txt  cam_test.py  camera_label.py  config.yaml  consts.py  evaluate.py  model.py  mp_node.py  output_box.py  pjm_nn_node.py  pjmatch.py  pyproject.toml  workers.py
llm_model/: Modelfile
res/ui/: main_window.ui
scripts/: download_checkpoints.py  download_llm_model.py
stgcn/: README.md  STGCN_REASERCH.md  config.json  gso.py  stgcn.py
stgcn/stgcn_src/: README.md  layers.py  models.py
