[project]
name = "app"
version = "0.1.0"
description = "PJMATCH OFFICIAL RELEASE V0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mediapipe>=0.10.35",
    "opencv-python>=4.13.0.92",
    "pyside6>=6.11.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.0",
    "torch>=2.12.0",
]
